# Federated-Heatmaps

./: LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
src/federated_heatmaps/: __init__.py  main.py
src/federated_heatmaps/algorithms/: __init__.py  algorithm1.py  algorithm2.py
src/federated_heatmaps/config/: __init__.py  config.py
src/federated_heatmaps/differential_privacy/: __init__.py  differential_privacy.py  noise.py
src/federated_heatmaps/quad_tree/: __init__.py  tree.py
src/federated_heatmaps/utils/: __init__.py  utils.py
tests/unit/: test_differential_privacy.py  test_noise.py
